# GhostBrain

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  deployment.md  pyproject.toml  test_groq_failed.py  test_local.py  test_pipecat.py  zensical.toml
.github/workflows/: deploy.yml  docs.yml  lint-test.yml  terraform-plan.yml
docs/: architecture.md  index.md  local-testing.md  setup.md  status.md
docs/api/: app.md  config.md
docs/api/handlers/: post_call.md  websocket.md
docs/api/modules/ai/: context.md  llm.md  stt.md  tts.md
docs/api/transport/: twilio.md
docs/api/utils/: transcript.md
docs/architecture/: index.md
docs/customization/: context.md  index.md  llm.md  stt.md  tools.md  tts.md
docs/infrastructure/: index.md
docs/local-testing/: index.md
docs/self-hosting/: index.md
docs/sphinx/: conf.py  index.rst
infra/: main.tf  terraform.tfvars.example
scripts/: build_docs.sh
src/: bot.py  requirements.txt
src/ghost_brain/: __about__.py  __init__.py  app.py  config.py  local_mic_test.py  local_test.py
src/ghost_brain/core/: debug.py  pipeline.py  runner.py
src/ghost_brain/handlers/: post_call.py  websocket.py
src/ghost_brain/services/: context.py  llm.py  stt.py  tts.py
src/ghost_brain/tools/: search.py
src/ghost_brain/transport/: twilio.py
src/ghost_brain/utils/: anthropic.py  gcs_bucket.py  transcript.py
src/ghostwriter/: __init__.py  app.py  config.py  pipeline.py  runner.py  transcript.py  transport.py
terraform/: backend.tf  main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
terraform/environments/prod/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/ghost_brain/: .terraform-docs.yml  cloudrun_live.tf  cloudrun_post_call.tf  eventarc.tf  main.tf  secrets.tf  twilio.tf  variables.tf
terraform/modules/ghostwriter/: apis.tf  cloudrun.tf  main.tf  outputs.tf  secrets.tf  variables.tf  versions.tf
tests/: conftest.py
tests/unit/: test_app.py  test_config.py  test_llm.py  test_transcript.py
(+14 files in other folders)
